force-app/main/default/objects/Trailhead_Profile__c/Trailhead_Profile__c.object-meta.xml
<CustomObject>
    <label>Trailhead Profile</label>
    <nameField>
        <label>Trailhead Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailhead Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>