force-app/main/default/objects/Trailhead_Profile__c/fields/Exams_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Exams_Cleared__c</fullName>
    <label>Exams Cleared</label>
    <type>TextArea</type>
</CustomField>