force-app/main/default/objects/Trailhead_Profile__c/fields/Superbadges_Completed__c.field-meta.xml
<CustomField>
    <fullName>Superbadges_Completed__c</fullName>
    <label>Superbadges Completed</label>
    <type>TextArea</type>
</CustomField>