force-app/main/default/objects/Trailhead_Profile__c/fields/Trailhead_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_User_Id__c</fullName>
    <label>Trailhead User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>